# pxp

./: Cargo.toml  README.md
crates/span/src/: lib.rs
src/: main.rs
src/cmd/: lsp.rs  mod.rs
